version r84-release
------------------------
    * Fixed a main-alt leaveTime bug.
    * Fixed main-alt attendance.
    * Fixed attendance sheet grids highlight and update.
    + Added "Sit Out" attendance state.
    + Added roster invitaion.

version r83-release
------------------------
    * Fixed member deletion bugs (RosterEditor).
    * Fixed ENCOUNTER_END popups.
    * Fixed Attendances tab auto refresh.
    + Added role count text in AttendanceFrame.

version r82-release
------------------------
    * Fixed Profiles button
    * Fixed columns checkbox error
    * Fixed New Raid Log

version r81-release
------------------------
    + Added killed bosses details.
    * Updated RaidLogsFrame (new tabs structure: Summary, Attendances, Loots).
    * Moved AttendanceEditor into RaidLogsFrame.
    * Disabled Loot distribution tool and FloatButtons.
    * Updated loot data structure.
    * Renamed LC/EPGP functions.
    * Updated functions: SetTooltip.
    * Deleting current tracking log will stop tracking automatically.

version r80-beta
------------------------
    * Fixed bugs for BfA. (date related functions, tContains, ScrollFrame)

version r79-release
------------------------
    * Fixed popup height
    * Fixed AR 30/60/90/lifeTime
    * Changed type of startTime to number
    + Added endTime and leaveTime

version r78-release
------------------------
    * Optimized raid log data structure.
    * Fixed roster editor bugs (especially for DKP).
    * Fixed raid log entry deletion (EPGP/DKP penalize).
    + Added support for alts and primary roles.
    + Added description to raid logs.
    - Removed absentees from AwardFrame.
    - Removed class filter.

version r77-beta
------------------------
    + Added support for DKP system
    + Added "Note" for GP/DKP Credit

version r76-release
------------------------
    + Added "Scale", GRA frame scale can be changed in Config > Appearance.
    * Fixed float buttons bugs
    * Fixed AttendanceEditor RST bugs
